--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,10 @@
             var num= document.getElementById("n1");
             num.value= Math.pow(num.value,3);
         }
+        function cuarta() {
+            var num= document.getElementById("n2");
+            num.value= Math.pow(num.value,4);
+        }
     </script>
 </head>
 <body>
@@ -15,5 +19,7 @@
 Number:
 <input type="text" id="n1">
 <button onclick="cube()">x^3</button>
+<input type="text" id="n2">
+<button onclick="cube()">x^4</button>
 </body>
 </html>
