--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,10 @@
             var num= document.getElementById("n1");
             num.value= Math.pow(num.value,3);
         }
+        function sen() {
+            var num= document.getElementById("n2");
+            num.value= Math.pow(num.value,sen(n2));
+        }
     </script>
 </head>
 <body>
@@ -15,5 +19,7 @@
 Number:
 <input type="text" id="n1">
 <button onclick="cube()">x^3</button>
+<input type="text" id="n2">
+<button onclick="sen()">sen(n2)</button>
 </body>
 </html>
